# nfs-utility-suite

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
exports/: Cargo.toml
exports/src/: lib.rs
nfs3/: Cargo.toml  README.md  build.rs  mount_proto.x  nfs3.x  nfs3_xdr.x
nfs3/src/: lib.rs
rpc_protocol/: Cargo.toml  build.rs  rpc_prot.x
rpc_protocol/protocol_definitions/: rpcbind.x
rpc_protocol/src/: client.rs  lib.rs  rpcbind_server.rs  server.rs
rpc_protocol/src/rpcbind/: client.rs  mod.rs  server.rs
rpc_protocol/src/server/: mod.rs  ring.rs
rpc_protocol/tests/: rpc.rs
rpcbind/: Cargo.toml  build.rs  rpcbind.x
rpcbind/src/: client.rs  lib.rs  server.rs
rpcbind/tests/: rpcbind.rs
test_xdr/: Cargo.toml  build.rs
test_xdr_no_alloc/: Cargo.toml
test_xdr_no_alloc/tests/: basic_structs.rs
tests/alloc/: Cargo.toml  build.rs
tests/alloc/input/: arrays.x  hello.x  optional.x  structs.x  typedef.x  unions.x
tests/alloc/tests/: basic_xdr_types.rs  invalid.rs
tests/input/: arrays.x  optional.x  structs.x  unions.x
tests/no_alloc/: Cargo.toml  build.rs
tests/no_alloc/input/: arrays.x  enums.x  structs.x  unions.x
tests/no_alloc/tests/: arrays.rs  basic_structs.rs  enums.rs  optionals.rs  unions.rs
tests/zcopy/: Cargo.toml  build.rs
tests/zcopy/input/: arrays.x  structs.x  unions.x
tests/zcopy/tests/: arrays.rs  basic_xdr_types.rs  optional.rs  structs.rs  typedef.rs  union.rs
xdr_codegen/: Cargo.toml
xdr_codegen/src/: ast.rs  ir.rs  lib.rs  main.rs  parser.rs  scanner.rs  symbol_table.rs  validate.rs
xdr_codegen/src/codegen/: alloc.rs  deserialize.rs  mod.rs  no_alloc.rs  zcopy_deser.rs
xdr_lib/: Cargo.toml
xdr_lib/src/: lib.rs
xdr_rpc/: Cargo.toml
xdr_rpc/src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  scanner.rs  symbol_table.rs
