[package]
name = "nfs3"
version = "0.1.0"
edition = "2021"

[lib]
name = "nfs3"
path = "src/lib.rs"

[[bin]]
name = "mountd"
path = "src/bin/mountd.rs"

[[bin]]
name = "showmount"
path = "src/bin/showmount.rs"

[[bin]]
name = "nfs_server"
path = "src/bin/nfs_server.rs"

[[bin]]
name = "nfs_cli"
path = "src/bin/nfs_cli.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.8"
rpc_protocol = { path = "../rpc_protocol" }
log = "0.4.27"

[build-dependencies]
xdr_codegen = { path = "../xdr_codegen" }
