[package]
name = "rpc_protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc_protocol"
path = "src/lib.rs"

[[bin]]
name = "rpcinfo"
path = "src/bin/rpcinfo.rs"

[[bin]]
name = "rpcbind"
path = "src/bin/rpcbind.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"

[build-dependencies]
xdr_codegen = { path = "../xdr_codegen" }
