[package]
name = "rpc_protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc_protocol"
path = "src/lib.rs"
doctest = false


[dependencies]
log = "0.4.27"
nix = { version = "0.30.1", features = ["socket"] }
xdr_lib = { path = "../xdr_lib" }

[build-dependencies]
xdr_codegen = { path = "../xdr_codegen" }
