[package]
name = "rpcbind"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpcbind"
path = "src/lib.rs"

[[bin]]
name = "rpcinfo"
path = "src/bin/rpcinfo.rs"

[[bin]]
name = "rpcbind"
path = "src/bin/rpcbind.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
nix = { version = "0.30.1", features = ["socket"] }
rpc_protocol = { path = "../rpc_protocol" }

[build-dependencies]
xdr_codegen = { path = "../xdr_codegen" }
